--- a/stylesheet/styles.css
+++ b/stylesheet/styles.css
@@ -28,4 +28,10 @@ body, html {
       text-align: center;
       
   }
+  .column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
+  }
   
