--- a/stylesheet/styles.css
+++ b/stylesheet/styles.css
@@ -28,10 +28,16 @@ body, html {
       text-align: center;
       
   }
-  .column {
-    float: left;
-    width: 50%;
-    padding: 10px;
-    height: 300px; /* Should be removed. Only for demonstration */
+  .column{
+      float: left;
+      padding: 10px;
+      height: 300px;
   }
+  .left {
+      width: 25%;
+  }
+  .right {
+      width: 75%;
+  }
+  
   
