--- a/stylesheet/styles.css
+++ b/stylesheet/styles.css
@@ -6,8 +6,6 @@ body, html {
   .bg {
     /* The image used */
     background-image: url("images/bgImage.jpg");
-  
-    /* Full height */
     height: 50%; 
   
     /* Center and scale the image nicely */
@@ -28,7 +26,11 @@ body, html {
       text-align: center;   
 
   }
+  .below{
+      top: 70%;
+  }
   .row {
+    top: 70%;
     display: flex;
     box-sizing: border-box;
   }
@@ -42,10 +44,10 @@ body, html {
   
   .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color: black;
   }
   .topnav a {
-    float: right;
+    float: left;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
@@ -55,6 +57,10 @@ body, html {
   .topnav a:hover {
     background-color: #ddd;
     color: black;
+  }
+  .topnav a.active {
+    background-color: #04AA6D;
+    color: white;
   }
   
   
